kubernetes/argocd/applications/argocd/routes/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-server
  namespace: argocd
  labels:
    route.scope: external
  annotations:
    external-dns.alpha.kubernetes.io/public: "true"
    gatus.home-operations.com/enabled: "true"
    gatus.home-operations.com/endpoint: |
      group: ArgoCD
spec:
  parentRefs:
    - name: gateway-public
      namespace: network
  hostnames:
    - argocd.vaderrp.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: crowdsec-bouncer
      backendRefs:
        - name: argocd-server
          port: 80
